--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^9.4.0",
+    "koa-send": "^5.0.1",
     "mysql": "^2.18.1"
   }
 }
