--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-mount": "^4.0.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^9.4.0",
     "koa-send": "^5.0.1",
+    "koa-static": "^5.0.0",
     "mysql": "^2.18.1"
   }
 }
